# mcp-server-eia

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: smoke_eia.py
src/mcp_server_eia/: __init__.py  __main__.py  config.py  eia_client.py  mappings.py  plant_id.py  response_util.py  server.py
src/mcp_server_eia/tools/: electricity.py  emissions.py  fuel_prices.py  plants.py  prices.py  projections.py  steo.py
tests/: test_electricity.py  test_fuel_prices.py  test_mappings.py  test_steo_forecast.py
